--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:11.2.0'
     compile 'com.google.android.gms:play-services-places:11.2.0'
     compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'com.android.support:design:22.2.1'
     testCompile 'junit:junit:4.12'
 }
 
